# fullstack-template

./: README.md
backend/: pyproject.toml
backend/src/: main.py
frontend/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.tsx  main.tsx  tailwind.css
frontend/src/api/: instance.ts
